# packaging-guide

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  README.rst  cookiecutter.json  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  oa_update.yml  pre-commit-update.yaml  tests.yml
docs/: ci.rst  conf.py  data.rst  docs.rst  extensions.rst  index.rst  minimal.rst  releasing.rst  rtd_environment.yaml  scripts.rst  tests.rst  tox.rst
docs/advanced/: index.rst  versioning.rst
hooks/: post_gen_project.py
tests/: _toxplugin.py  conftest.py  test_build_artifacts.py  test_hooks.py  test_package.py  test_rendered_tox.py
tools/: batchpr_manual_cruft_update.py
{{ cookiecutter.package_name }}/: .codecov.yaml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  MANIFEST.in  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
{{ cookiecutter.package_name }}/.circleci/: config.yml
{{ cookiecutter.package_name }}/.github/workflows/: ci.yml  sub_package_update.yml
{{ cookiecutter.package_name }}/docs/: conf.py  index.rst
{{ cookiecutter.package_name }}/docs/whatsnew/: index.rst
{{ cookiecutter.package_name }}/licenses/: BSD3.rst  TEMPLATE_LICENSE.rst
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/: .pre-commit-config.yml  __init__.py  example_mod.py
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/_dev/: scm_version.py
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/tests/: test_example.py
