[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
{%- if cookiecutter.use_compiled_extensions == 'y' %}
  "extension-helpers",
  "numpy>=1.25",
  "cython",
{%- endif %}
]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.module_name }}"
description = "{{ cookiecutter.short_description }}"
requires-python = ">={{ cookiecutter.minimum_python_version }}"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
{%- if cookiecutter.author_name and cookiecutter.author_email %}
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
{%- endif %}
dependencies = [
  {{- cookiecutter._install_requires -}}
]
dynamic = ["version"]

{% if cookiecutter.include_example_code == 'y' -%}
[project.scripts]
open_astronomy_package_template_example = "{{ cookiecutter.module_name }}.example_mod:main"

{% endif -%}
[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx>=5.0.0",
  "sphinx-automodapi>=0.14.1",
  "sphinx-changelog>=1.5.0",
  "sunpy-sphinx-theme>=2.0.3",
  "packaging",
]

[project.urls]
{%- if cookiecutter.project_url %}
Homepage = "{{ cookiecutter.project_url }}"
{%- else %}
Homepage = "https://sunpy.org"
{%- endif %}
{%- if cookiecutter.sourcecode_url %}
"Source Code" = "{{ cookiecutter.sourcecode_url }}"
{%- endif %}
{%- if cookiecutter.download_url %}
Download = "{{ cookiecutter.download_url }}"
{%- endif %}
{%- if cookiecutter.documentation_url %}
Documentation = "{{ cookiecutter.documentation_url }}"
{%- endif %}
{%- if cookiecutter.changelog_url %}
Changelog = "{{ cookiecutter.changelog_url }}"
{%- endif %}
{%- if cookiecutter.issue_tracker_url %}
"Issue Tracker" = "{{ cookiecutter.issue_tracker_url }}"
{%- endif %}

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.module_name }}*"]
{%- if cookiecutter.enable_dynamic_dev_versions == 'y' %}
exclude = ["{{ cookiecutter.module_name }}._dev*"]
{%- endif %}
{% if cookiecutter.use_compiled_extensions == 'y' %}
[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h"]
{% endif %}
[tool.setuptools_scm]
{% if cookiecutter.enable_dynamic_dev_versions == 'y' -%}
write_to = "{{ cookiecutter.module_name }}/_version.py"
{%- else -%}
write_to = "{{ cookiecutter.module_name }}/version.py"
{%- endif %}

[tool.gilesbot]
  [tool.gilesbot.pull_requests]
  enabled = true

  [tool.gilesbot.towncrier_changelog]
  enabled = true
  verify_pr_number = true
  changelog_skip_label = "No Changelog Entry Needed"
  help_url = "https://github.com/{{cookiecutter.github_repo}}/blob/main/changelog/README.rst"

  changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/{{ cookiecutter.github_repo}}/blob/main/changelog/README.rst)."

  type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/{{cookiecutter.github_repo}}/blob/main/changelog/README.rst)"

  number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
  package = "{{ cookiecutter.package_name }}"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} https:github.com/{{ cookiecutter.github_repo | default('sunpy/sunpy') }}/changelog/pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true
